@@ -61,4 +61,32 @@ $d2 = $d->add_months(-2);
 is $d2->strftime($FMT), '11/04/2000', 'month subtraction';
 
 
+# adding years is not quite as bad
+# just make sure we cross at least one leap year boundary
+
+$d2 = $d->add_years(12);
+isa_ok $d2, $CLASS, 'add_years result' or diag('    isa ', ref $d2);
+is $d2->strftime($FMT), '01/04/2013', 'year addition';
+$d2 = $d->add_years(-3);
+is $d2->strftime($FMT), '01/04/1998', 'year subtraction';
+
+
+# for adding and subtracting days and weeks,
+# we can just test against adding the equivalent integers
+# (since we've already established that that part works)
+for (0..120)					# just for consistency with the datetime tests, really
+{
+	is $d->add_days($_),    	$d + $_,		"adding $_ days works";
+	is $d->add_weeks($_),   	$d + $_ * 7,	"adding $_ weeks works";
+
+	is $d->subtract_days($_),	$d - $_,		"subtracting $_ days works";
+	is $d->subtract_weeks($_),	$d - $_ * 7,	"subtracting $_ weeks works";
+}
+
+# on the other hand, you *can't* add or subtract hours, minutes, or seconds
+# because that would break the contract of dates always having a time component of midnight
+throws_ok { $d->$_ } qr/cannot call $_ on a Date value/, "::Date properly disallows $_"
+		foreach map { ("add_$_", "subtract_$_") } qw< seconds minutes hours >;
+
+
 done_testing;
